** the new servlet-filter de.businesscode.bcdui.web.filters.SubjectSettingsFilter allows setting subject filters from client
** client-controlled subject filters can be set from client via bcdui.util.security API
* Optimized row level security supporting data not requiring filtering: SubjectFilterType in subjectSettings.xml can be tagged to say null-values can be accessed by everyone in reading

. Server
* Updated 3rd party jars (apache commons etc) to latest versions
* Add notLike and notIn operators to f:Filter, including universal filter widget

. Build / Dev / Docu
* In Eclipse, sub-projects Client, Server, Theme etc now have names BCD-UI--SubProjectName to keep them together in the navigation tree
* Switched to gradle 4.2, added gradle wrapper, updated nodeJs to 6.11
* Updated bcduiApiStubs.js to fit Eclipse Oxygen+Tern and IDEA 2017.2
* HTML JS API docu is now showing source names and lines

.Major bug fixes:
* I18n: local messages.xml catalog file can contain multi language enabling full i18n support w/o database
* HTML Custom Elements for Safari was broken, after Safari switched to Webcomponents API v1

.Backward Incompatibilities:
* jQueryMobile is not compatible with jQuery 3.x anymore. When using jQueryMobile, you need to build bcdui with a jQuery 2.x  
* bcd_virtualFileSystem got additional columns updatedBy, last_update, bcd_userId with additional writebacks and security constraints and a new additional key column
* Component: cube/scorecard blindUpDowns, ranking require new i18n keys (bcd_Rank_, bcd_Sc_Blind_, bcd_Cb_Blind_)
* Charts: Moved VML drawer to BCD-UI-DE
* Updated 3rd party jars (apache commons etc) to latest versions
* Cube: for templateManager, RankingEditor or Summary, you need to include bcduiComponent in addition to bcduiCube. Symptom: _renderSummaryArea is undefined
** CubeContextMenu, Sort Measre is replaced by Column Sorting, when using custom context menus, remove calls to setSortMeasure, add calls to setColumnSort 